자동로그인 API 생성 및 카카오 로그인 API 수정
