# src/swagger/build.yaml
@@ -234,8 +234,27 @@ paths:
                     type: integer
                   message:
                     type: string
-                  result:
-                    $ref: '#/components/schemas/Auth'
+              example:
+                isSuccess: true
+                code: 200
+                message: 카카오 로그인 성공
+        '201':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isSuccess:
+                    type: boolean
+                  code:
+                    type: integer
+                  message:
+                    type: string
+              example:
+                isSuccess: true
+                code: 201
+                message: 카카오 회원가입 가능합니다.
         '204':
           $ref: '#/components/responses/EmptyValueError'
         '500':
@@ -452,6 +471,70 @@ paths:
                 isSuccess: true
                 code: 404
                 message: '입력값이 없습니다. (닉네임, 현재 비밀번호, 새 비밀번호)'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+  /jwt:
+    get:
+      summary: 자동로그인 API
+      tags:
+        - user
+      parameters:
+        - in: header
+          name: x-access-token
+          type: string
+          required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isSuccess:
+                    type: boolean
+                  code:
+                    type: integer
+                  message:
+                    type: string
+              example:
+                isSuccess: true
+                code: 200
+                message: 토큰 검증 성공
+        '301':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isSuccess:
+                    type: boolean
+                  code:
+                    type: integer
+                  message:
+                    type: string
+              example:
+                isSuccess: false
+                code: 301
+                message: 로그인이 되어 있지 않습니다.
+        '304':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  isSuccess:
+                    type: boolean
+                  code:
+                    type: integer
+                  message:
+                    type: string
+              example:
+                isSuccess: false
+                code: 304
+                message: 검증실패
         '500':
           $ref: '#/components/responses/InternalServerError'
 components:
